--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
+@plugin "daisyui" {
+  themes: light --default;
+};
 
 @theme {
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  /* --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono); */
 }
 
 :root {
@@ -19,6 +22,6 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: #DCD7C9;
   font-family: Arial, Helvetica, sans-serif;
 }
